@@ -3,9 +3,12 @@ from five import grok
 from opengever.base.browser.helper import get_css_class
 from opengever.dossier.browser.overview import DossierOverview
 from opengever.globalindex.interfaces import ITaskQuery
+from opengever.globalindex.model.task import Task
 from opengever.inbox import _
 from opengever.inbox.browser.tabs import get_current_inbox_principal
 from opengever.inbox.inbox import IInbox
+from opengever.ogds.base.utils import get_client_id
+from sqlalchemy import and_, or_
 from zope.component import getUtility
 
 
@@ -38,6 +41,13 @@ class InboxOverview(DossierOverview):
         query_util = getUtility(ITaskQuery)
         query = query_util._get_tasks_for_responsible_query(
             get_current_inbox_principal(self.context))
+
+        # If a task has a successor task, it should only list one of them,
+        # the one which is physically one the current client.
+        query = query.filter(
+            or_(
+                and_(Task.predecessor == None, Task.successors == None),
+                Task.client_id == get_client_id()))
 
         return query.all()[:5]
 
