@@ -4,6 +4,9 @@ Changelog
 3.1.2 (unreleased)
 ------------------
 
+- Inbox overview: Only list current part of a predecessor/successor couple.
+  [phgross]
+
 - Override livesearch_reply.py to provide correct advanced search link.
   [lgraf]
 
